--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -6,12 +6,12 @@
     <span>
         Powered by </span><a href="https://hexo.io/zh-cn/" target="_blank">Hexo </a> &amp;
         Theme <a href="https://github.com/SakuraKoi/hexo-theme-whirlwind" target="_blank">Whirlwind </a>
-<br>
+        
         <span id="runtime_span"></span>
 <script type="text/javascript">
 function show_runtime() {
     window.setTimeout("show_runtime()", 1000);
-    X = new Date("11/28/2019 00:00:00"); // 🚨 【修改这里】换成你的建站日期 (月/日/年)
+    X = new Date("11/28/2019 00:00:00"); 
     Y = new Date();
     T = (Y.getTime() - X.getTime());
     M = 24 * 60 * 60 * 1000;
@@ -28,6 +28,7 @@ function show_runtime() {
 show_runtime();
 </script>
 	 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+     <br>
             <span id="busuanzi_container_site_pv">你是到访这里的第<span id="busuanzi_value_site_pv"></span>个团子~</span>
     </div>
     <div class="moe-icp">
