fix: 更新代码块背景和字体颜色以改善可读性

--- a/source/css/markdown/_paragraph.scss
+++ b/source/css/markdown/_paragraph.scss
@@ -83,8 +83,8 @@ pre, code {
   font-size: .9em;
   white-space: pre-wrap;
   border: 1px solid var(--border-color-normal);
-  background: var(--bg-color-darker-1);
-  color: #d14;
+  background: #e0e0e0;
+  color: rgb(229, 1, 120);
   border-radius: 5px;
 }
 
